--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "build:dev": "tsc -b && vite build && cd dist && npx http-server -p 3333"
     },
     "dependencies": {
         "react": "^18.3.1",
