--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "@types/node": "^22.10.7",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@typescript-eslint/eslint-plugin": "^8.21.0",
+        "@typescript-eslint/parser": "^8.21.0",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
-        "eslint": "^9.17.0",
+        "eslint": "^9.18.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
