--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "noImplicitAny": false,
-    "strict": false,
+    "strict": false
   }
 }
