--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.20.6",
     "chart.js": "^4.4.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
