--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.20.6",
+    "@types/crypto-js": "^4.2.2",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
