--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.9",
@@ -21,8 +22,10 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
