--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.9",
